Complete Detections CRUD
